[gd_scene load_steps=5 format=3 uid="uid://cfl4og5ll4c01"]

[ext_resource type="Script" uid="uid://c4yinmh1yy4ej" path="res://scripts/NPC.gd" id="1_mhefn"]
[ext_resource type="Texture2D" uid="uid://1cq5sebifm7f" path="res://assets/NPC/Soldier 07-1.png" id="2_6xvi5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xvi5"]
size = Vector2(21, 16.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktgr7"]
size = Vector2(51, 55)

[node name="Npc" type="CharacterBody2D"]
z_index = 2
collision_layer = 16
collision_mask = 15
script = ExtResource("1_mhefn")

[node name="UpperBodySprite" type="Sprite2D" parent="."]
z_index = 4
z_as_relative = false
position = Vector2(0, -9)
texture = ExtResource("2_6xvi5")
hframes = 3
vframes = 8
frame = 1

[node name="LowerBodySprite" type="Sprite2D" parent="."]
z_index = 1
z_as_relative = false
position = Vector2(0, 7)
texture = ExtResource("2_6xvi5")
hframes = 3
vframes = 8
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_as_relative = false
position = Vector2(0.5, 7.75)
shape = SubResource("RectangleShape2D_6xvi5")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("RectangleShape2D_ktgr7")
